--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,16 +7,18 @@ phases:
       # Main project dependencies
       - echo "Installing project dependencies..."
       - npm install --quiet
-      
+
       # Layer dependencies
       - echo "Installing layer dependencies..."
-      - cd src/layers/resource-layer/nodejs && npm install --quiet && cd ../../../..
-      
+      - cd src/layers/resource-layer/nodejs && npm install --quiet && cd
+        ../../../..
+
       # FFmpeg setup
       - echo "Setting up FFmpeg..."
       - mkdir -p src/layers/resource-layer/ffmpeg
       - cd src/layers/resource-layer
-      - curl -s -O https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-arm64-static.tar.xz
+      - curl -s -O
+        https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-arm64-static.tar.xz
       # Fixed: correct filename in tar command
       - tar xf ffmpeg-git-arm64-static.tar.xz > /dev/null 2>&1
       - cp ffmpeg-git-*/ffmpeg ffmpeg/
@@ -35,28 +37,29 @@ phases:
       # Fixed: correct cleanup path
       - rm -rf src/layers/resource-layer/ffmpeg/*
       - echo "✓ Cleanup completed"
-      
+
   pre_build:
     commands:
       - echo "Starting pre-build phase..."
       - echo "✓ Pre-build completed"
-      
+
   build:
     commands:
       - echo "Starting build..."
       - rm -rf dist
       - npx tsc
       - echo "Running CloudFormation package..."
-      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
+      - aws cloudformation package --template template.yml --s3-bucket
+        $S3_BUCKET --output-template-file template-export.yml
       - echo "✓ Build completed"
-      
+
   post_build:
     commands:
       - echo "Starting post-build cleanup..."
       - rm -rf node_modules
       - rm -rf src/layers/resource-layer/opt/ffmpeg/*
       - npm prune --omit=dev --quiet
-      - echo "✓ Cleanup completed"      
+      - echo "✓ Cleanup completed"
 artifacts:
   files:
     - template-export.yml
