--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "devDependencies": {
         "@aws-sdk/client-cognito-identity-provider": "^3.723.0",
         "@aws-sdk/client-dynamodb": "^3.724.0",
+        "@aws-sdk/client-ecs": "^3.726.1",
         "@aws-sdk/client-lambda": "^3.723.0",
         "@aws-sdk/client-s3": "^3.726.0",
         "@aws-sdk/client-sqs": "^3.726.1",
@@ -16,13 +17,13 @@
         "@types/fluent-ffmpeg": "^2.1.27",
         "@types/node": "^22.10.5",
         "fluent-ffmpeg": "^2.1.3",
+        "install": "^0.13.0",
         "jest": "^29.5.0",
+        "npm": "^10.9.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
     },
-    "scripts": {
-        "test": "jest"
-    },
+    "scripts": {},
     "main": "index.js",
     "keywords": [],
     "author": "",
